[gd_scene load_steps=10 format=3 uid="uid://cypdvnm6guct"]

[ext_resource type="PhysicsMaterial" uid="uid://diliqw0gfjyyu" path="res://mat/car_material.tres" id="1_6m2fo"]
[ext_resource type="Script" path="res://scripts/AICarBehaviour.gd" id="1_ix2dw"]
[ext_resource type="PhysicsMaterial" uid="uid://vmnnk1f64j7i" path="res://mat/wheel_material.tres" id="2_67b8g"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i1h7k"]
radius = 8.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_0og35"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rcjt2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tsghq"]

[sub_resource type="SphereMesh" id="SphereMesh_tbyjs"]

[sub_resource type="BoxMesh" id="BoxMesh_41k8d"]

[node name="AICar" type="Node2D"]
script = ExtResource("1_ix2dw")

[node name="CarBase" type="RigidBody2D" parent="."]
collision_layer = 9
mass = 2.0
physics_material_override = ExtResource("1_6m2fo")

[node name="Base" type="CollisionShape2D" parent="CarBase"]
rotation = 1.5708
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_i1h7k")

[node name="MeshInstance2D" type="MeshInstance2D" parent="CarBase/Base"]
self_modulate = Color(0.466667, 0.168627, 0, 1)
scale = Vector2(15, 15)
mesh = SubResource("CapsuleMesh_0og35")

[node name="right" type="Area2D" parent="CarBase"]
position = Vector2(20, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarBase/right"]
shape = SubResource("CircleShape2D_rcjt2")
debug_color = Color(0.664424, 0.454851, 0.630545, 0.42)

[node name="left" type="Area2D" parent="CarBase"]
position = Vector2(-20, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarBase/left"]
shape = SubResource("CircleShape2D_rcjt2")
debug_color = Color(0.664424, 0.454851, 0.630545, 0.42)

[node name="LW" type="RigidBody2D" parent="."]
position = Vector2(-14, 10)
collision_layer = 9
physics_material_override = ExtResource("2_67b8g")

[node name="Circle" type="CollisionShape2D" parent="LW"]
shape = SubResource("CircleShape2D_tsghq")

[node name="Mesh" type="MeshInstance2D" parent="LW/Circle"]
self_modulate = Color(0.0885599, 0.0885599, 0.0885599, 1)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_tbyjs")

[node name="Inner" type="MeshInstance2D" parent="LW/Circle"]
self_modulate = Color(0.29219, 0.29219, 0.29219, 1)
scale = Vector2(9.41166, 9.41166)
mesh = SubResource("BoxMesh_41k8d")

[node name="RW" type="RigidBody2D" parent="."]
position = Vector2(14, 10)
collision_layer = 9
physics_material_override = ExtResource("2_67b8g")

[node name="Circle" type="CollisionShape2D" parent="RW"]
shape = SubResource("CircleShape2D_tsghq")

[node name="Mesh" type="MeshInstance2D" parent="RW/Circle"]
self_modulate = Color(0.0885599, 0.0885599, 0.0885599, 1)
scale = Vector2(20, 20)
mesh = SubResource("SphereMesh_tbyjs")

[node name="Inner" type="MeshInstance2D" parent="RW/Circle"]
self_modulate = Color(0.29219, 0.29219, 0.29219, 1)
scale = Vector2(9.41166, 9.41166)
mesh = SubResource("BoxMesh_41k8d")

[node name="lj" type="PinJoint2D" parent="."]
position = Vector2(-14, 10)
node_a = NodePath("../CarBase")
node_b = NodePath("../LW")
bias = 0.1

[node name="rj" type="PinJoint2D" parent="."]
position = Vector2(14, 10)
node_a = NodePath("../CarBase")
node_b = NodePath("../RW")
bias = 0.1

[connection signal="body_entered" from="CarBase/right" to="." method="_on_right_body_entered"]
[connection signal="body_entered" from="CarBase/left" to="." method="_on_left_body_entered"]
